# python-project-template

./: .gitignore  AGENTS.md  Makefile  README.md  code_style.md  init_project.sh  pyproject.toml  test_init_project.sh
src/my_package/: __init__.py
tests/: test_basic.py
